--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My Practice Github Repo </title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <div>
+        <h3> Practice Header </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
+        </p>
+    </div>
 </body>
 </html>
