adding extra divs

--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
         </p>
     </div>
+    <div>
+        <h3> Practice Header 2 </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
+        </p>
+    </div>
+    <div>
+        <h3> Practice Header 3 </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
+        </p>
+    </div>
 </body>
 </html>
