--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
         </p>
     </div>
+
+    <div>
+        <h3> How to push incremental commit in github:</h3>
+        <ol type="i">
+            <li> git add .</li>
+            <li> git commit -m"add some meaningful commit message"</li>
+            <li> git push</li>
+        </ol>
+    </div>
 </body>
 </html>
