add an image of messi neymar

--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
             <li> git push</li>
         </ol>
     </div>
+    <div class="s">
+        <h3> Messi x Neymar </h3>
+        <img src="./images/neymar-jr-psg-lionel-messi-787917696.webp" alt="messi neymar psg pic">
+    </div>
 </body>
 </html>
