adding fav icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My Practice Github Repo </title>
+    <link rel="shortcut icon" href="./images/neymar-jr-psg-lionel-messi-787917696.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
