--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,54 @@
     <link rel="shortcut icon" href="./images/neymar-jr-psg-lionel-messi-787917696.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    <div>
-        <h3> Practice Header </h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
+    <header>
+        <h1 id="header"> Some of football players info </h1>
+    </header>
+
+    <div class="card">
+        <h4> Lionel Messi </h4>
+
+        <img src="./images/messi.jpg" alt="Messi">
+        <p class="paragraph">
+            Lionel Messi is a football player from Argentina who plays for FC Barcelona. He has won the Ballon D'Or, the
+            annual award given to the best player in the world, 7 times, 2022 FIFA World Cup winner and an Olympic gold
+            medal winner in 2008. He was born in 1987 in Rosario, Argentina's third-biggest city.
         </p>
+
     </div>
-    <div>
-        <h3> Practice Header 2 </h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
+    <div class="card">
+        <h4> Cristiano Ronaldo </h4>
+
+        <img src="./images/ronaldo.jpg" alt="Ronaldo">
+        <p class="paragraph">
+            Ronaldo was born on February 5, 1985 and was named Ronaldo after the then US President Ronald Reagan. He
+            grew up in a poor family and had to share a bedroom and bathroom with his older brother and two older
+            sisters. He started playing soccer at an early age when he was just eight.
         </p>
+
     </div>
-    <div>
-        <h3> Practice Header 3 </h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dignissimos quo laudantium natus illo ipsa voluptates minus iure excepturi architecto vel sapiente nihil consectetur impedit ducimus ut cum, doloribus vero.
+    <div class="card">
+        <h4> Neymar Junior </h4>
+
+        <img src="./images/neymar.jpg" alt="Neymar">
+        <p class="paragraph">
+            His speed is unmatched by any other player. Neymar is known as "the fastest man on Earth." He's also one of
+            the most prolific goal scorers in the sport. He's scored more than 50 goals in each of the last two seasons.
         </p>
+
+    </div>
+    <div class="card">
+        <h4> Sergio Ramos </h4>
+
+        <img src="./images/ramos.jpeg" alt="Ramos">
+        <p class="paragraph">
+            He has scored over 100 goals in his career, making him one of the highest-scoring defenders in the history
+            of the sport. In addition to his success with Real Madrid, Ramos has had a highly successful international
+            career with the Spanish national team.
+        </p>
+
     </div>
 
     <div>
@@ -35,9 +66,10 @@
             <li> git push</li>
         </ol>
     </div>
-    <div class="s">
+    <div class="pic">
         <h3> Messi x Neymar </h3>
         <img src="./images/neymar-jr-psg-lionel-messi-787917696.webp" alt="messi neymar psg pic">
     </div>
 </body>
+
 </html>
