more css and cards create

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="card">
         <h4> Lionel Messi </h4>
 
-        <img src="./images/messi.jpg" alt="Messi">
+        <img class="pics" src="./images/messi.jpg" alt="Messi">
         <p class="paragraph">
             Lionel Messi is a football player from Argentina who plays for FC Barcelona. He has won the Ballon D'Or, the
             annual award given to the best player in the world, 7 times, 2022 FIFA World Cup winner and an Olympic gold
@@ -28,7 +28,7 @@
     <div class="card">
         <h4> Cristiano Ronaldo </h4>
 
-        <img src="./images/ronaldo.jpg" alt="Ronaldo">
+        <img class="pics" src="./images/ronaldo.jpg" alt="Ronaldo">
         <p class="paragraph">
             Ronaldo was born on February 5, 1985 and was named Ronaldo after the then US President Ronald Reagan. He
             grew up in a poor family and had to share a bedroom and bathroom with his older brother and two older
@@ -39,7 +39,7 @@
     <div class="card">
         <h4> Neymar Junior </h4>
 
-        <img src="./images/neymar.jpg" alt="Neymar">
+        <img class="pics" src="./images/neymar.jpg" alt="Neymar">
         <p class="paragraph">
             His speed is unmatched by any other player. Neymar is known as "the fastest man on Earth." He's also one of
             the most prolific goal scorers in the sport. He's scored more than 50 goals in each of the last two seasons.
@@ -49,7 +49,7 @@
     <div class="card">
         <h4> Sergio Ramos </h4>
 
-        <img src="./images/ramos.jpeg" alt="Ramos">
+        <img class="pics" src="./images/ramos.jpeg" alt="Ramos">
         <p class="paragraph">
             He has scored over 100 goals in his career, making him one of the highest-scoring defenders in the history
             of the sport. In addition to his success with Real Madrid, Ramos has had a highly successful international
@@ -58,7 +58,7 @@
 
     </div>
 
-    <div>
+    <div class="list">
         <h3> How to push incremental commit in github:</h3>
         <ol type="i">
             <li> git add .</li>
@@ -67,8 +67,8 @@
         </ol>
     </div>
     <div class="pic">
-        <h3> Messi x Neymar </h3>
-        <img src="./images/neymar-jr-psg-lionel-messi-787917696.webp" alt="messi neymar psg pic">
+        <h3 class="lul"> Messi x Neymar </h3>
+        <img class="imgs" src="./images/neymar-jr-psg-lionel-messi-787917696.webp" alt="messi neymar psg pic">
     </div>
 </body>
 
