--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
         <img class="pics" src="./images/messi.jpg" alt="Messi">
         <p class="paragraph">
-            Lionel Messi is a football player from Argentina who plays for FC Barcelona. He has won the Ballon D'Or, the
-            annual award given to the best player in the world, 7 times, 2022 FIFA World Cup winner and an Olympic gold
-            medal winner in 2008. He was born in 1987 in Rosario, Argentina's third-biggest city.
+            Lionel Messi is a football player from Argentina who plays for FC Barcelona. He has won the Ballon D'Or, the annual award given to the best player in the world, 7 times, 2022 FIFA World Cup winner and an Olympic gold medal winner in 2008. He was born in 1987 in Rosario, Argentina's third-biggest city.
         </p>
 
     </div>
@@ -30,9 +28,7 @@
 
         <img class="pics" src="./images/ronaldo.jpg" alt="Ronaldo">
         <p class="paragraph">
-            Ronaldo was born on February 5, 1985 and was named Ronaldo after the then US President Ronald Reagan. He
-            grew up in a poor family and had to share a bedroom and bathroom with his older brother and two older
-            sisters. He started playing soccer at an early age when he was just eight.
+            Ronaldo was born on February 5, 1985 and was named Ronaldo after the then US President Ronald Reagan. He grew up in a poor family and had to share a bedroom and bathroom with his older brother and two older sisters. He started playing soccer at an early age when he was just eight.
         </p>
 
     </div>
@@ -41,8 +37,7 @@
 
         <img class="pics" src="./images/neymar.jpg" alt="Neymar">
         <p class="paragraph">
-            His speed is unmatched by any other player. Neymar is known as "the fastest man on Earth." He's also one of
-            the most prolific goal scorers in the sport. He's scored more than 50 goals in each of the last two seasons.
+            His speed is unmatched by any other player. Neymar is known as "the fastest man on Earth." He's also one of the most prolific goal scorers in the sport. He's scored more than 50 goals in each of the last two seasons.
         </p>
 
     </div>
@@ -51,9 +46,7 @@
 
         <img class="pics" src="./images/ramos.jpeg" alt="Ramos">
         <p class="paragraph">
-            He has scored over 100 goals in his career, making him one of the highest-scoring defenders in the history
-            of the sport. In addition to his success with Real Madrid, Ramos has had a highly successful international
-            career with the Spanish national team.
+            He has scored over 100 goals in his career, making him one of the highest-scoring defenders in the history of the sport. In addition to his success with Real Madrid, Ramos has had a highly successful international career with the Spanish national team.
         </p>
 
     </div>
