height correction of cards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1 id="header"> Some of football players info </h1>
     </header>
-
+<div class="container">
     <div class="card">
         <h4> Lionel Messi </h4>
 
@@ -63,6 +63,7 @@
         <h3 class="lul"> Messi x Neymar </h3>
         <img class="imgs" src="./images/neymar-jr-psg-lionel-messi-787917696.webp" alt="messi neymar psg pic">
     </div>
+</div>
 </body>
 
 </html>
